--- a/.env
+++ b/.env
@@ -1,11 +1,3 @@
-# Django secret key (generated randomly for security)
-SECRET_KEY=p$9s!2n4#y_0a&8v1w3l@z7r5^bq!6m8f+2h*e1k0c!t9v$4d
-
-# Debug mode: True for local, False for production
+DJANGO_SECRET_KEY=v#0(ju5^hd_oyd92e*)^(bs+g@uik5c*i)f4@!0xkpvsneb3e+
 DEBUG=True
-
-# Allowed hosts: local + Render app URL
-ALLOWED_HOSTS=127.0.0.1,smart-hospital-xyz.onrender.com
-
-# Optional: PostgreSQL database URL for Render
-# DATABASE_URL=postgres://user:password@host:port/dbname
+ALLOWED_HOSTS=127.0.0.1,localhost,Aakash.pythonanywhere.com
